@@ -4,7 +4,8 @@ In this module you will write Arquillian tests for the JSF backing beans and RES
 
 ## Install the Arquillian Addon on Forge
 
-* In Forge, execute the following command `addon-install-from-git --url https://github.com/aslakknutsen/plugin-arquillian.git  --branch forge2`
+* Make sure the `arquillian-addon` is in the Maven directory
+* In Forge, execute the following command `addon-install --coordinate org.arquillian.forge:arquillian-addon,1.0.0-SNAPSHOT`
 
 ## Generate the project with JBoss Forge
 
@@ -13,58 +14,53 @@ In this module you will write Arquillian tests for the JSF backing beans and RES
 * Make sure the `jbossHome` variable in `before/02-Arquillian/generate.fsh` is pointing to `$WILDFLY_HOME`
 * Execute the `generate.fsh` script with the command `run ../before/02-Arquillian/generate.fsh` 
 
-# DOJO - Write the JSF backing bean tests
+# DOJO - Pass a JSF backing bean test
 
-## Write the JSF backing bean tests
-
-* Copy the files `CustomerBeanTest.java`, `PublisherBeanTest.java` and `MusicianBeanTest.java` to the `view` package
-* `cp ../before/02-Arquillian/CustomerBeanTest.java src/test/java/org/agoncal/training/javaee6adv/view`
-* `cp ../before/02-Arquillian/PublisherBeanTest.java src/test/java/org/agoncal/training/javaee6adv/view`
-* `cp ../before/02-Arquillian/MusicianBeanTest.java src/test/java/org/agoncal/training/javaee6adv/view`
-* Code the other tests following the same logic until all the tests pass
-* Add the methods `should_crud` and `should_paginate` to every test
-
-## Execute the tests in a remote environment
+## Pass the CustomerBeanTest in a remote environment
 
 * Start WildFly (`$WILDFLY_HOME/bin/standalone.sh`)
 * Make sure WildFly has enough memory `-Xms64m -Xmx1024m -XX:MaxPermSize=512m -Djava.net.preferIPv4Stack=true`
-* `mvn -Parquillian-wildfly-remote test` will execute the tests with WildFly up and running and with the application deployed
+* Execute only one test `mvn -Parquillian-wildfly-remote -Dtest=org.agoncal.training.javaee6adv.view.CustomerBeanTest test`
+
+## Write and pass the AuthorBeanTest
+
+* Check the tests `CustomerBeanTest.java`, `MusicianBeanTest.java` and `PublisherBeanTest.java` that are under `view` package
+* Code the `AuthorBeanTest` following the same logic until the test passes
+* Add the methods `should_crud` and `should_paginate` 
 * If you have the following error, it's because you are not using the Arquillian Maven profile `DeploymentScenario contains a target (_DEFAULT_) not matching any defined Container in the registry`
 * `NoClassDefFoundError` means that your ShrinkWrap packaging misses some classes (check the `createDeployment` method) 
 * `ConstraintViolationException` is thrown when the entity is not valid
 
-# DOJO - Write the REST endpoints tests
+# KATA - Do the same for all the JSF backing bean tests
 
-## Write the REST endpoints tests
+# DOJO - Pass a REST endpoints test
 
-* Copy the files `CustomerEndpointTest.java` and `MusicianEndpointTest.java` to the `rest` package
-* `cp ../before/02-Arquillian/CustomerEndpointTest.java src/test/java/org/agoncal/training/javaee6adv/rest`
-* `cp ../before/02-Arquillian/MusicianEndpointTest.java src/test/java/org/agoncal/training/javaee6adv/rest`
-* Code the other tests following the same logic until all the tests pass
+## Pass the CustomerEndpointTest in a remote environment
+
+* Make sure WildFly is started
+* Execute only one test `mvn -Parquillian-wildfly-remote -Dtest=org.agoncal.training.javaee6adv.rest.CustomerEndpointTest test`
 * Notice that the Arquillian tests are `@RunAsClient` and that they package a `WebArchive` (instead of a `JarArchive`) in `@Deployment(testable = false)`
+
+## Write and pass the AuthorEndpointTest
+
+* Check the tests `CustomerEndpointTest.java` and `MusicianEndpointTest.java` that are under `rest` package
+* Code the `AuthorEndpointTest` following the same logic until the test passes
 * Package the `persistence.xml` as a resource and the `beans.xml` as WEB-INF resource
 * Inject the `baseURL` as an `@ArquillianResource` instead of injecting the bean
-
-## Execute the tests in a remote environment
-
-* Start WildFly (`$WILDFLY_HOME/bin/standalone.sh`)
-* Make sure WildFly has enough memory `-Xms64m -Xmx1024m -XX:MaxPermSize=512m -Djava.net.preferIPv4Stack=true`
-* `mvn -Parquillian-wildfly-remote test` will execute the tests with WildFly up and running and with the application deployed
 * If you have the following error, it's because you are not using the Arquillian Maven profile `DeploymentScenario contains a target (_DEFAULT_) not matching any defined Container in the registry`
 * `NoClassDefFoundError` means that your ShrinkWrap packaging misses some classes (check the `createDeployment` method) 
 * `ConstraintViolationException` is thrown when the entity is not valid
+
+# KATA - Do the same for all the JSF backing bean tests
+
+* Make sure WildFly is started
+* `mvn -Parquillian-wildfly-remote test` will execute all the tests
 
 ## Debug the tests if needed
 
 * Make sure WildFly has the debug settings `JAVA_OPTS="$JAVA_OPTS -agentlib:jdwp=transport=dt_socket,address=8787,server=y,suspend=n"`
 
-## Execute the tests in a managed environment
-
-* Stop WildFly
-* Make sure the `jbossHome` variable in `cdbookstore/src/test/resources/arquillian.xml` is pointing to `$WILDFLY_HOME`
-* `mvn -Parquillian-wildfly-managed test` will execute the tests managing WildFly
-
-## Build the application
+# Build and run the application
 
 * Use Maven and build the application with `mvn clean install`
 
@@ -72,12 +68,29 @@ In this module you will write Arquillian tests for the JSF backing beans and RES
 
 * Start WildFly (`$WILDFLY_HOME/bin/standalone.sh`)
 * Make sure WildFly has enough memory `-Xms64m -Xmx1024m -XX:MaxPermSize=512m -Djava.net.preferIPv4Stack=true`
-* Go to the [admin console](http://localhost:9990/)
-* Deploy the `cdbookstore/target/cdbookstore.war` file in _Runtime -> Manage Deployments -> Add -> Enable_
+* JBoss Console
+	* Go to the [admin console](http://localhost:9990/)
+	* Deploy the `cdbookstore/target/cdbookstore.war` file in _Runtime -> Manage Deployments -> Add -> Enable_
+* or JBoss CLI
+	* Execute JBoss CLI : `$WILDFLY_HOME/bin/jboss-cli.sh`
+	* Connect to the server by entering : `connect` 
+	* Deploy the war : `deploy cdbookstore/target/cdbookstore.war --force`  
 
 ## Check the web application
 
 * With a browser go to [http://localhost:8080/cdbookstore]()
+* Browse pages to create/update/remove entities
+
+## Check the REST interfaces
+
+* The following REST interfaces are defined
+* [http://localhost:8080/cdbookstore/rest/authors]()
+* [http://localhost:8080/cdbookstore/rest/books]()
+* [http://localhost:8080/cdbookstore/rest/cds]()
+* [http://localhost:8080/cdbookstore/rest/customers]()
+* [http://localhost:8080/cdbookstore/rest/musicians]()
+* [http://localhost:8080/cdbookstore/rest/purchaseorders]()
+* Use [PostMan REST client](https://chrome.google.com/webstore/detail/postman-rest-client/fdmmgilgnpjigdojojpjoooidkmcomcm) to create/update/remove entities
 
 # Restitution
 
